# AI-Helper.

./: .gitignore  AIHelper.spec  AIHelperHUD.spec  README.md  pip.conf  pip.ini  pyproject.toml  requirements.txt
ai_helper/: __init__.py  __main__.py  agent.py  ai_integrations.py  backup.py  clipboard_monitor.py  communicator.py  config.py  dashboard.py  diagnostics.py  file_system.py  gpu_monitor.py  hotkey.py  hud.py  main.py  memory.py  ml_engine.py  monitor.py  notification_center.py  orchestrator.py  organizer.py  process_manager.py  program_interactor.py  scheduler.py  service.py  tools.py  updater.py  voice.py  wake_word.py  web_ui.py
scripts/: setup_d_drive.py  start_aihelper.bat
tests/: test_agent.py  test_ai_integrations.py  test_ai_integrations_deep.py  test_backup.py  test_clipboard_monitor.py  test_communicator.py  test_config.py  test_dashboard.py  test_diagnostics.py  test_file_system.py  test_gpu_monitor.py  test_hotkey.py  test_memory.py  test_ml_engine.py  test_monitor.py  test_notification_center.py  test_orchestrator_extended.py  test_organizer.py  test_process_manager.py  test_program_interactor.py  test_scheduler.py  test_tools.py  test_updater.py  test_voice.py  test_web_ui.py
